fixed spacing, scroll-to-top, view curr. questions

--- a/client/src/displays/Review/Review.css
+++ b/client/src/displays/Review/Review.css
@@ -64,3 +64,8 @@
   background-color: white;
 }
 
+pre {
+  border: none;
+  border-radius: 0px;
+}
+
